[package]
name = "rcb"
version = "0.1.0"
authors = ["John Kåre Alsaker <john.kare.alsaker@gmail.com>"]
edition = "2018"

[dependencies]
toml = "0.5"
clap = "2.33.3"
serde = { version = "1.0.123", features = ["rc"] }
serde_derive = "1.0.123"
rand = "0.8.3"
ring = "0.16.20"
data-encoding = "2.3.2"
rayon = "1.5.0"
kib = "4.0.0"
colored = "2.0.0"
chrono = "0.4.19"
serde_json = "1.0.64"
winapi = "0.3"
term_size = "0.3.2"